[gd_scene load_steps=9 format=3 uid="uid://dv3dt0j3jketh"]

[ext_resource type="Script" uid="uid://bcblbfjqnsf3" path="res://core/ui/common/quick_bar/performance_menu.gd" id="1_r31yj"]
[ext_resource type="PackedScene" uid="uid://cemxrvvjgm4g" path="res://core/ui/components/slider.tscn" id="1_yptsc"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="2_my16i"]
[ext_resource type="Resource" uid="uid://dpc1o781f43ef" path="res://core/ui/card_ui/quick_bar/quick_bar_menu_focus.tres" id="3_hsr7n"]
[ext_resource type="PackedScene" uid="uid://d0u3rsa5qpj57" path="res://core/ui/components/subsection_label.tscn" id="5_hil7p"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="6_ycrnf"]
[ext_resource type="PackedScene" uid="uid://d1qb7euwlu7bh" path="res://core/ui/components/toggle.tscn" id="7_j02ci"]
[ext_resource type="PackedScene" uid="uid://xei5afwefxud" path="res://core/ui/components/dropdown.tscn" id="8_j2331"]

[node name="Performance" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
grow_horizontal = 2
script = ExtResource("1_r31yj")

[node name="FocusGroup" parent="." instance=ExtResource("2_my16i")]
unique_name_in_owner = true
focus_stack = ExtResource("3_hsr7n")

[node name="ApplyTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ServiceTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="MangoAppSlider" parent="." instance=ExtResource("1_yptsc")]
unique_name_in_owner = true
layout_mode = 2
text = "Performance Overlay"
max_value = 4.0
tick_count = 5

[node name="FramerateLimitSlider" parent="." instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
text = "FPS Limit"

[node name="RefreshRateSlider" parent="." instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
text = "Refresh Rate"

[node name="ModeToggle" parent="." instance=ExtResource("7_j02ci")]
unique_name_in_owner = true
layout_mode = 2
text = "Advanced Mode"
button_pressed = true

[node name="WaitLabel" parent="." instance=ExtResource("5_hil7p")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Waiting for PowerStation service..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CPUSectionLabel" parent="." instance=ExtResource("6_ycrnf")]
visible = false
layout_mode = 2
text = "CPU Settings"

[node name="CPUBoostButton" parent="." instance=ExtResource("7_j02ci")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../GPUTempSlider")
focus_neighbor_top = NodePath("../GPUTempSlider")
focus_neighbor_right = NodePath("../SMTButton")
focus_neighbor_bottom = NodePath("../SMTButton")
focus_next = NodePath("../SMTButton")
focus_previous = NodePath("../GPUTempSlider")
text = "CPU Boost"
separator_visible = false

[node name="SMTButton" parent="." instance=ExtResource("7_j02ci")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../CPUBoostButton")
focus_neighbor_top = NodePath("../CPUBoostButton")
focus_neighbor_right = NodePath("../CPUCoresSlider")
focus_neighbor_bottom = NodePath("../CPUCoresSlider")
focus_next = NodePath("../CPUCoresSlider")
focus_previous = NodePath("../CPUBoostButton")
text = "SMT Enabled"
separator_visible = false

[node name="CPUCoresSlider" parent="." instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../SMTButton")
focus_neighbor_top = NodePath("../SMTButton")
focus_neighbor_right = NodePath("../TDPSlider")
focus_neighbor_bottom = NodePath("../TDPSlider")
focus_next = NodePath("../TDPSlider")
focus_previous = NodePath("../SMTButton")
text = "CPU Cores"
value = 1.0
max_value = 1.0
min_value = 1.0

[node name="GPUSectionLabel" parent="." instance=ExtResource("6_ycrnf")]
visible = false
layout_mode = 2
text = "GPU Settings"

[node name="TDPSlider" parent="." instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../CPUCoresSlider")
focus_neighbor_top = NodePath("../CPUCoresSlider")
focus_neighbor_right = NodePath("../TDPBoostSlider")
focus_neighbor_bottom = NodePath("../TDPBoostSlider")
focus_next = NodePath("../TDPBoostSlider")
focus_previous = NodePath("../CPUCoresSlider")
text = "TDP"
max_value = 0.0

[node name="TDPBoostSlider" parent="." instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../TDPSlider")
focus_neighbor_top = NodePath("../TDPSlider")
focus_previous = NodePath("../TDPSlider")
text = "TDP Boost"
max_value = 0.0

[node name="GPUFreqButton" parent="." instance=ExtResource("7_j02ci")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../TDPBoostSlider")
focus_neighbor_top = NodePath("../TDPBoostSlider")
focus_neighbor_right = NodePath("../GPUFreqMinSlider")
focus_neighbor_bottom = NodePath("../GPUFreqMinSlider")
focus_next = NodePath("../GPUFreqMinSlider")
focus_previous = NodePath("../TDPBoostSlider")
text = "Manual Freq"
separator_visible = false

[node name="GPUFreqMinSlider" parent="." instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
focus_neighbor_right = NodePath("../GPUFreqMaxSlider")
focus_neighbor_bottom = NodePath("../GPUFreqMaxSlider")
focus_next = NodePath("../GPUFreqMaxSlider")
text = "Min Freq"
max_value = 0.0
step = 100.0

[node name="GPUFreqMaxSlider" parent="." instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../GPUFreqMinSlider")
focus_neighbor_top = NodePath("../GPUFreqMinSlider")
focus_neighbor_right = NodePath("../GPUTempSlider")
focus_neighbor_bottom = NodePath("../GPUTempSlider")
focus_next = NodePath("../GPUTempSlider")
focus_previous = NodePath("../GPUFreqMinSlider")
text = "Max Freq"
max_value = 0.0
step = 100.0

[node name="GPUTempSlider" parent="." instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../GPUFreqMaxSlider")
focus_neighbor_top = NodePath("../GPUFreqMaxSlider")
focus_neighbor_right = NodePath("../CPUBoostButton")
focus_neighbor_bottom = NodePath("../CPUBoostButton")
focus_next = NodePath("../CPUBoostButton")
focus_previous = NodePath("../GPUFreqMaxSlider")
text = "GPU Temp Limit"
value = 70.0
max_value = 105.0
min_value = 70.0

[node name="PowerProfileDropdown" parent="." instance=ExtResource("8_j2331")]
visible = false
layout_mode = 2
title = "Power Profile"
description = ""
